test/files/neg/t6120.check
t6120.scala:5: warning: method bippy in class BooleanOps is deprecated: bobo
  def f = null == null bippy
                       ^
t6120.scala:5: warning: comparing values of types Null and Null using `==' will always yield true
  def f = null == null bippy
               ^
t6120.scala:6: warning: method bippy in class BooleanOps is deprecated: bobo
  def g = true.bippy
               ^
error: No warnings can be incurred under -Xfatal-warnings.
three warnings found
one error found
